--- a/public/home.html
+++ b/public/home.html
@@ -19,7 +19,7 @@
       <br>
 
       <div class="text-center">
-        <a href="/reservation"><button type="button" class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-list-alt"></span> Survey</button></a>
+        <a href="./survey.html"><button type="button" class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-list-alt"></span> Survey</button></a>
       </div>
 
     </div>
